--- a/M03 - Programació/proyectocivilizations/pom.xml
+++ b/M03 - Programació/proyectocivilizations/pom.xml
@@ -13,4 +13,18 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <!-- Dependencia para ojdbc11 -->
+    <dependencies>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc11</artifactId>
+            <version>23.4.0.24.05</version>
+        </dependency>
+        <!-- Dependencia para SQLite JDBC (ya existente en tu archivo) -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
+    </dependencies>
 </project>
