Musiquita + cambios en DAO
ost de menu + añadido de metodos.

--- a/M03 - Programació/proyectocivilizations/pom.xml
+++ b/M03 - Programació/proyectocivilizations/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.civilizations</groupId>
@@ -13,18 +13,24 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-    <!-- Dependencia para ojdbc11 -->
+    <!-- Dependencias -->
     <dependencies>
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc11</artifactId>
             <version>23.4.0.24.05</version>
         </dependency>
-        <!-- Dependencia para SQLite JDBC (ya existente en tu archivo) -->
+        <!-- Dependencia para SQLite JDBC -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.36.0.3</version>
+        </dependency>
+        <!-- Dependencia para JLayer -->
+        <dependency>
+            <groupId>javazoom</groupId>
+            <artifactId>jlayer</artifactId>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
 </project>
